changement des images à partir des fleches OK

--- a/index.html
+++ b/index.html
@@ -30,22 +30,7 @@
         <img
           class="banner-img"
           src="./assets/images/slideshow/slide1.jpg"
-          alt="Banner Print-it"
-        />
-        <img
-          class="banner-img"
-          src="./assets/images/slideshow/slide2.jpg"
-          alt="Banner Print-it"
-        />
-        <img
-          class="banner-img"
-          src="./assets/images/slideshow/slide3.jpg"
-          alt="Banner Print-it"
-        />
-        <img
-          class="banner-img"
-          src="./assets/images/slideshow/slide4.png"
-          alt="Banner Print-it"
+          alt="Banner Print-it" id="slide"
         />
 
         <!-- AJOUT DES ARROWS-->
@@ -58,7 +43,7 @@
           </div>
         </div>
 
-        <p>Impressions tous formats <span>en boutique et en ligne</span></p>
+        <p id="slideTag">Impressions tous formats <span>en boutique et en ligne</span></p>
 
         <!-- AJOUT DES BULLET POINTS-->
         <div class="dots">
