--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <!-- AJOUT DES BULLET POINTS-->
         <div class="dots">
-          <div class="dot"></div>
+          <div class="dote"></div>
           <div class="dot"></div>
           <div class="dot"></div>
           <div class="dot"></div>
