correct ajout variable tableau vide

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
         <!-- AJOUT DES BULLET POINTS-->
         <div class="dots">
+          <!-- <div class="dot"></div>
           <div class="dot"></div>
           <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
+          <div class="dot"></div> -->
         </div>
       </div>
       <section id="about-us" class="container">
