--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <img
           class="banner-img"
           src="./assets/images/slideshow/slide1.jpg"
-          alt="Banner Print-it" id="slide"
+          alt="Banner Print-it"
+          id="slide"
         />
 
         <!-- AJOUT DES ARROWS-->
@@ -42,16 +43,11 @@
             <img src="./assets/images/arrow_right.png" alt="fleche droite" />
           </div>
         </div>
-
-        <p id="slideTag">Impressions tous formats <span>en boutique et en ligne</span></p>
-
+        <p id="slideTag">
+          Impressions tous formats <span>en boutique et en ligne</span>
+        </p>
         <!-- AJOUT DES BULLET POINTS-->
-        <div class="dots">
-          <!-- <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div> -->
-        </div>
+        <div class="dots"></div>
       </div>
       <section id="about-us" class="container">
         <div>
